--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         var div = document.createElement("div");
       div.innerHTML =
     '<div class="slideshow-container">\n' +
+        '<p>' + window.location.href + "</p>"+
     '<p>' + urlParams + "</p>"+
     '<p>' + myVariable + "</p>"+
     '</div>\n';
