--- a/index.html
+++ b/index.html
@@ -4,20 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Test Telegram</title>
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
 </head>
 <body>
     <script>
         function getUrlVariable(variable) {
-            let chat_id = window.location.href.split("?")[1].split("=")[1];
-            return chat_id;
+            return window.location.href.split("?")[1].split("=")[1].split("#")[0];
         }
-
+        let tg = window.Telegram.WebApp; //получаем объект webapp телеграма 
         var div = document.createElement("div");
       div.innerHTML =
     '<div class="slideshow-container">\n' +
     '<p>' + getUrlVariable("chat_id") + "</p>"+
+    '<p>' + JSON.stringify(tg) + "</p>"+
     '</div>\n';
 document.body.appendChild(div);
+
+
     </script>
 </body>
 </html>
